# ai-test-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: ai-test-copilot.service  server-setup.sh
examples/: sample_spec.md
src/ai_test_copilot/: __init__.py  cli.py  client.py  feishu.py  history.py  models.py  prompts.py  pytest_export.py  webapp.py
src/ai_test_copilot/static/: index.html
tests/: test_cli.py  test_feishu.py  test_history.py  test_models.py  test_pytest_export.py  test_webapp.py
